# libdinitctl

./: COPYING.md  README.md  meson.build  meson_options.txt
data/: org.chimera.dinit.conf  org.chimera.dinit.service
include/: libdinitctl.h
src/: common.h  dinit-dbus.cc  libdinitctl.c  messages.h
